[project]
name = "numbin"
version = "0.4.0"
description = "an efficient binary serialization format for numerical data"
authors = [
    {name = "Keming", email = "kemingy94@gmail.com"},
]
dependencies = [
    "numpy>=1.21.1",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["machine learning", "deep learning", "serialization"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://mosecorg.github.io/numbin"
documentation = "https://mosecorg.github.io/numbin"
repository = "https://github.com/mosecorg/numbin"
changelog = "https://github.com/mosecorg/numbin/releases"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=22.8",
    "isort>=5.10",
    "autoflake>=1.6.1",
    "pytest>=7.1",
]
msgpack = ["msgpack>=1.0.4"]

[tool]
