[project]
name = "numbin"
version = "0.5.0"
description = "an efficient binary serialization format for numerical data"
authors = [
    {name = "Keming", email = "kemingy94@gmail.com"},
]
dependencies = [
    "numpy>=1.21.1",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["machine learning", "deep learning", "serialization"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://mosecorg.github.io/numbin"
documentation = "https://mosecorg.github.io/numbin"
repository = "https://github.com/mosecorg/numbin"
changelog = "https://github.com/mosecorg/numbin/releases"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.2.2",
    "pytest>=7.1",
]
msgpack = ["msgpack>=1.0.4"]
bench = [
    "msgpack>=1.0.4",
    "numpy",
    "safetensors",
    "msgpack-numpy",
]

[tool]

[tool.setuptools.package-data]
numbin = ["py.typed"]

[tool.ruff]
target-version = "py38"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF", "D"]
ignore = ["E501", "D203", "D213"]
[tool.ruff.lint.isort]
known-first-party = ["numbin"]
[tool.ruff.lint.pylint]
max-args = 10
[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]
"benchmark/*" = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "google"
